# localeye

./: .gitignore  CMakeLists.txt  setup.sh
libs/LibCamera/: CMakeLists.txt  LibCamera.cpp  LibCamera.h  main.cpp
src/: main.cpp  playground.cpp
